@@ -1,3 +1,14 @@
+2011-04-01  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Not reviewed trivial change.
+
+        Web Inspector: The page agent should be enabled even if JAVASCRIPT_DEBUGGER is off.
+        Followup change for r82281.
+        https://bugs.webkit.org/show_bug.cgi?id=57327
+
+        * inspector/InspectorPageAgent.cpp:
+        * inspector/InspectorPageAgent.h:
+
 2011-04-01  Michael Saboff  <msaboff@apple.com>
 
         Reviewed by Darin Adler.
